# lc-community

./: .gitignore  Cargo.toml  README.md
benches/: Cargo.toml
benches/src/lc-routes/: user_login_benchmark.rs
benches/src/lc-utils/: utils_benchmark.rs
cmds/: Cargo.toml
cmds/src/: main.rs
config/: default.toml
crates/lc-domain/: Cargo.toml
crates/lc-dto/: Cargo.toml
crates/lc-dto/src/: articles.rs  lib.rs  permissions.rs  users.rs
crates/lc-middlewares/: Cargo.toml
crates/lc-middlewares/src/: auth.rs  cors.rs  lib.rs
crates/lc-models/: Cargo.toml
crates/lc-models/src/: articles.rs  lib.rs  permissions.rs  users.rs
crates/lc-routes/: Cargo.toml
crates/lc-routes/src/: articles.rs  lib.rs  permissions.rs  users.rs
crates/lc-routes/src/articles/: article_handle.rs  group_handle.rs  mod.rs  tag_handle.rs
crates/lc-services/: Cargo.toml
crates/lc-services/src/: articles.rs  lib.rs  permissions.rs  users.rs
crates/lc-utils/: Cargo.toml
crates/lc-utils/src/: config.rs  database.rs  errors.rs  extract.rs  lib.rs  response.rs
migrations/: 20241008125029_create_users_table.sql  20241008125029_example_create_table.sql  20241008132132_alter_users_table.sql  20241008132132_examples_alter_table.sql  20241010123551_create_user_table.sql  20241010123600_create_user_infos_table.sql  20241010123608_create_user_login_infos_table.sql  20241010123618_create_user_avatars_table.sql  20241010123656_create_user_relation_types_table.sql  20241010123702_create_user_relation_status_table.sql  20241010123711_create_user_relations_table.sql  20241010123757_create_user_communicates_table.sql  20241010123844_create_user_communicate_contents_table.sql  20241010123857_create_user_groups_table.sql  20241010123905_create_user_gruop_relations_table.sql  20241010123914_create_user_roles_table.sql  20241010123924_create_user_role_group_relations_table.sql  20241010123934_create_user_permissions_table.sql  20241010123948_create_user_role_permission_relations_table.sql  20241010124003_create_user_resources_table.sql  20241010124012_create_article_groups_table.sql  20241010124018_create_articles_table.sql  20241010124058_create_article_covers_table.sql  20241010124106_create_article_images_table.sql  20241010124123_create_article_group_relations_table.sql  20241010124149_create_user_article_relations_table.sql  20241010124158_create_article_resources_table.sql  20241010124249_create_article_tags_table.sql  20241010124301_create_article_tag_reltions_table.sql  20241010124311_create_article_likes_table.sql  20241010124334_create_article_collects_table.sql  20241010124345_create_article_comments_table.sql  20241010124355_create_article_view_records_table.sql  20241010124435_create_permission_user_resource_relations_table.sql  20241010124452_create_permission_article_resource_relations_table.sql  20241014113903_insert_user_groups_table.sql  20241014113921_insert_user_roles_table.sql  20241014113930_insert_user_permissions_table.sql  20241014114031_insert_user_role_group_relations_table.sql  20241014114034_insert_user_role_permission_relations_table.sql  (+7 more)
migrations/back/: create-table.back.sql  init-data.back.sql
migrations/creates/: 20241010123608_create_user_login_infos_table.sql  20241010123618_create_user_avatars_table.sql  20241010123711_create_user_relations_table.sql  20241010123844_create_user_communicate_contents_table.sql  20241010123857_create_user_groups_table.sql  20241010123905_create_user_gruop_relations_table.sql  20241010123914_create_user_roles_table.sql  20241010123934_create_user_permissions_table.sql  20241010123948_create_user_role_permission_relations_table.sql  20241010124003_create_user_resources_table.sql  20241010124012_create_article_groups_table.sql  20241010124018_create_articles_table.sql  20241010124058_create_article_covers_table.sql  20241010124123_create_article_group_relations_table.sql  20241010124158_create_article_resources_table.sql  20241010124301_create_article_tag_reltions_table.sql  20241010124334_create_article_collects_table.sql
tests/: Cargo.toml
tests/src/: config.rs  lib.rs
tests/src/commons/: mod.rs
tests/src/lc_services/: articles.rs  mod.rs  permissions.rs  users.rs
tests/src/lc_utils/: config.rs  mod.rs
