[workspace]
members = [
  "benches",
  "cmds",
  "crates/lc-domain",
  "crates/lc-routes",
  "crates/lc-services",
  "crates/lc-utils",
  "tests",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
anyhow = "1.0"
config = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }

# dev dependencies
criterion = { version = "0.4", features = [
  "html_reports",
  "async_futures",
  "async_tokio",
] }
axum-test = "16.0"

lc_utils = { path = "./crates/lc-utils" }
lc_routes = { path = "./crates/lc-routes" }
lc_services = { path = "./crates/lc-services" }
