[workspace]
members = [
  "benches",
  "cmds",
  "crates/lc-dto",
  "crates/lc-middlewares",
  "crates/lc-models",
  "crates/lc-routes",
  "crates/lc-services",
  "crates/lc-utils",
  "tests",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
argon2 = "0.5"
jwt = "0.16"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
rsa = "0.9"
base64 = "0.2"
ring = "0.17.8"
data-encoding = "2.6.0"

# dev dependencies
criterion = { version = "0.4", features = [
  "html_reports",
  "async_futures",
  "async_tokio",
] }
axum-test = "16.0"

lc_utils = { path = "./crates/lc-utils" }
lc_dto = { path = "./crates/lc-dto" }
lc_models = { path = "./crates/lc-models" }
lc_routes = { path = "./crates/lc-routes" }
lc_services = { path = "./crates/lc-services" }
lc_middlewares = { path = "./crates/lc-middlewares" }


# from https://docs.rs/rsa/latest/rsa/
[profile.dev.package.num-bigint-dig]
opt-level = 3
