[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
axum = { workspace = true }
criterion = { workspace = true }
axum-test = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

lc_utils = { workspace = true }
lc_routes = { workspace = true }
lc_services = { workspace = true }

[[bench]]
name = "user_login_benchmark"
path = "src/lc-routes/user_login_benchmark.rs"
harness = false

[[bench]]
name = "utils_benchmark"
path = "src/lc-utils/utils_benchmark.rs"
harness = false
