[package]
name = "cmds"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }

lc_routes = { workspace = true }
lc_utils = { workspace = true }
