[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
argon2 = { workspace = true }

pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }

lc_utils = { workspace = true }
lc_services = { workspace = true }
