[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
argon2 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

lc_utils = { workspace = true }
lc_dto = { workspace = true }
lc_services = { workspace = true }
