[package]
name = "lc_routes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }

lc_utils = { workspace = true }
lc_dto = { workspace = true }
lc_services = { workspace = true }
lc_models = { workspace = true }
lc_middlewares = { workspace = true }
