[package]
name = "lc_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
